--- a/prj.conf
+++ b/prj.conf
@@ -1,16 +1,49 @@
-#
-# Copyright (c) 2024 Nordic Semiconductor
-#
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
-#
-
 CONFIG_NCS_SAMPLES_DEFAULTS=y
-CONFIG_BT_DEVICE_NAME="Nordic Peripheral ID"
+
+CONFIG_BT_DEVICE_NAME="ADS1292"
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
 
-CONFIG_BT_EXT_ADV_MAX_ADV_SET=20
-CONFIG_BT_MAX_CONN=20
-CONFIG_BT_ID_MAX=20
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
+
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_500PPM=y
+CONFIG_BT_CTLR_SDC_MAX_CONN_EVENT_LEN_DEFAULT=0
+
+
+CONFIG_GPIO=y
+
+CONFIG_STDOUT_CONSOLE=y
+CONFIG_I2C=y
+CONFIG_SENSOR=y
+# CONFIG_SENSOR_LOG_LEVEL_DBG=y
+
+# Enable Multi-LED mode
+CONFIG_MAX30101_MULTI_LED_MODE=y
+
+# Configure slots for Multi-LED mode
+CONFIG_MAX30101_SLOT1=1
+CONFIG_MAX30101_SLOT2=3
+CONFIG_MAX30101_SLOT3=0
+CONFIG_MAX30101_SLOT4=0
+
+CONFIG_MAX30101_SMP_AVE=3
+CONFIG_MAX30101_SR=3
+# Set LED pulse amplitudes
+CONFIG_MAX30101_LED1_PA=15
+CONFIG_MAX30101_LED3_PA=15
+
+CONFIG_LOG=y
+CONFIG_PRINTK=y
+
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
+
+CONFIG_LOG_BACKEND_RTT=y
+
+# Enable the Shell
+CONFIG_SHELL=y
+CONFIG_I2C_SHELL=y
