--- a/sample.yaml
+++ b/sample.yaml
@@ -1,37 +1,62 @@
+# sample:
+#   description: Peripheral with multiple identities sample
+#   name: Peripheral with multiple identities
+# tests:
+#   sample.bluetooth.peripheral_with_multiple_identities:
+#     sysbuild: true
+#     integration_platforms:
+#       - nrf52840dk/nrf52840
+#       - nrf5340dk/nrf5340/cpuapp
+#       - nrf54l15dk/nrf54l05/cpuapp
+#       - nrf54l15dk/nrf54l10/cpuapp
+#       - nrf54l15dk/nrf54l15/cpuapp
+#       - nrf54h20dk/nrf54h20/cpurad
+#       - nrf54lm20dk/nrf54lm20a/cpuapp
+#       - nrf54lv10dk/nrf54lv10a/cpuapp
+#     platform_allow:
+#       - nrf52840dk/nrf52840
+#       - nrf5340dk/nrf5340/cpuapp
+#       - nrf54l15dk/nrf54l05/cpuapp
+#       - nrf54l15dk/nrf54l10/cpuapp
+#       - nrf54l15dk/nrf54l15/cpuapp
+#       - nrf54h20dk/nrf54h20/cpurad
+#       - nrf54lm20dk/nrf54lm20a/cpuapp
+#       - nrf54lv10dk/nrf54lv10a/cpuapp
+#       - nrf54lv10dk/nrf54lv10a/cpuapp/ns
+#     tags:
+#       - bluetooth
+#       - ci_build
+#       - sysbuild
+#     harness: console
+#     harness_config:
+#       type: multi_line
+#       ordered: true
+#       regex:
+#         - "Bluetooth initialized"
+#         - "Advertiser 19 successfully started"
+#     timeout: 15
+
+
 sample:
-  description: Peripheral with multiple identities sample
-  name: Peripheral with multiple identities
+  name: Heart Rate Sensor Sample
+common:
+  filter: dt_alias_exists("heart-rate-sensor")
+  harness: sensor
 tests:
-  sample.bluetooth.peripheral_with_multiple_identities:
-    sysbuild: true
+  sample.sensor.heart_rate:
+    tags: sensors
+    platform_allow: hexiwear/mk64f12
+    depends_on:
+      - i2c
+    integration_platforms:
+      - hexiwear/mk64f12
+  sample.sensor.heart_rate_interrupt:
+    tags: sensors
+    platform_allow: nrf52840dk/nrf52840
+    depends_on:
+      - i2c
     integration_platforms:
       - nrf52840dk/nrf52840
-      - nrf5340dk/nrf5340/cpuapp
-      - nrf54l15dk/nrf54l05/cpuapp
-      - nrf54l15dk/nrf54l10/cpuapp
-      - nrf54l15dk/nrf54l15/cpuapp
-      - nrf54h20dk/nrf54h20/cpurad
-      - nrf54lm20dk/nrf54lm20a/cpuapp
-      - nrf54lv10dk/nrf54lv10a/cpuapp
-    platform_allow:
-      - nrf52840dk/nrf52840
-      - nrf5340dk/nrf5340/cpuapp
-      - nrf54l15dk/nrf54l05/cpuapp
-      - nrf54l15dk/nrf54l10/cpuapp
-      - nrf54l15dk/nrf54l15/cpuapp
-      - nrf54h20dk/nrf54h20/cpurad
-      - nrf54lm20dk/nrf54lm20a/cpuapp
-      - nrf54lv10dk/nrf54lv10a/cpuapp
-      - nrf54lv10dk/nrf54lv10a/cpuapp/ns
-    tags:
-      - bluetooth
-      - ci_build
-      - sysbuild
-    harness: console
-    harness_config:
-      type: multi_line
-      ordered: true
-      regex:
-        - "Bluetooth initialized"
-        - "Advertiser 19 successfully started"
-    timeout: 15
+    extra_configs:
+      - CONFIG_GPIO=y
+      - CONFIG_MAX30101_TRIGGER_GLOBAL_THREAD=y
