adjust for fsc-bt634 w tps62746

--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,9 @@
 CONFIG_NCS_SAMPLES_DEFAULTS=y
 
+CONFIG_ADC=y
+CONFIG_ADC_ASYNC=y
+CONFIG_ADC_NRFX_SAADC=y
+
 CONFIG_BT_DEVICE_NAME="ADS1292"
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
@@ -20,20 +24,20 @@ CONFIG_I2C=y
 CONFIG_SENSOR=y
 # CONFIG_SENSOR_LOG_LEVEL_DBG=y
 
-# Enable Multi-LED mode
-CONFIG_MAX30101_MULTI_LED_MODE=y
+# # Enable Multi-LED mode
+# CONFIG_MAX30101_MULTI_LED_MODE=y
 
-# Configure slots for Multi-LED mode
-CONFIG_MAX30101_SLOT1=1
-CONFIG_MAX30101_SLOT2=3
-CONFIG_MAX30101_SLOT3=0
-CONFIG_MAX30101_SLOT4=0
+# # Configure slots for Multi-LED mode
+# CONFIG_MAX30101_SLOT1=1
+# CONFIG_MAX30101_SLOT2=3
+# CONFIG_MAX30101_SLOT3=0
+# CONFIG_MAX30101_SLOT4=0
 
-CONFIG_MAX30101_SMP_AVE=3
-CONFIG_MAX30101_SR=3
-# Set LED pulse amplitudes
-CONFIG_MAX30101_LED1_PA=15
-CONFIG_MAX30101_LED3_PA=15
+# CONFIG_MAX30101_SMP_AVE=2
+# CONFIG_MAX30101_SR=3
+# # Set LED pulse amplitudes
+# CONFIG_MAX30101_LED1_PA=63
+# CONFIG_MAX30101_LED3_PA=63
 
 CONFIG_LOG=y
 CONFIG_PRINTK=y
