change max30101 driver to allow for pw modulation

--- a/prj.conf
+++ b/prj.conf
@@ -28,26 +28,29 @@ CONFIG_SENSOR=y
 # CONFIG_MAX30101_MULTI_LED_MODE=y
 
 # # Configure slots for Multi-LED mode
-# CONFIG_MAX30101_SLOT1=1
-# CONFIG_MAX30101_SLOT2=3
-# CONFIG_MAX30101_SLOT3=0
-# CONFIG_MAX30101_SLOT4=0
+CONFIG_MAX30101_SLOT1=3
+CONFIG_MAX30101_SLOT2=0
+CONFIG_MAX30101_SLOT3=0
+CONFIG_MAX30101_SLOT4=0
 
-# CONFIG_MAX30101_SMP_AVE=2
-# CONFIG_MAX30101_SR=3
+# CONFIG_MAX30101_HEART_RATE_MODE=y
+CONFIG_MAX30101_ADC_RGE=1
+CONFIG_MAX30101_SMP_AVE=2
+CONFIG_MAX30101_SR=3
 # # Set LED pulse amplitudes
 # CONFIG_MAX30101_LED1_PA=63
-# CONFIG_MAX30101_LED3_PA=63
+CONFIG_MAX30101_LED3_PA=63
+CONFIG_MAX30101_PW=3
 
-CONFIG_LOG=y
+# CONFIG_LOG=y
 CONFIG_PRINTK=y
 
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
+# CONFIG_UART_CONSOLE=n
 
 CONFIG_LOG_BACKEND_RTT=y
 
 # Enable the Shell
-CONFIG_SHELL=y
-CONFIG_I2C_SHELL=y
+# CONFIG_SHELL=y
+# CONFIG_I2C_SHELL=y
