change driver (from nrf sdk to zephyr) and add interrupt

--- a/prj.conf
+++ b/prj.conf
@@ -27,30 +27,41 @@ CONFIG_SENSOR=y
 # # Enable Multi-LED mode
 # CONFIG_MAX30101_MULTI_LED_MODE=y
 
-# # Configure slots for Multi-LED mode
-CONFIG_MAX30101_SLOT1=3
-CONFIG_MAX30101_SLOT2=0
-CONFIG_MAX30101_SLOT3=0
-CONFIG_MAX30101_SLOT4=0
+# This enables the compilation of max30101_trigger.c
+CONFIG_MAX30101=y
+CONFIG_MAX30101_TRIGGER_GLOBAL_THREAD=y
+# CONFIG_MAX30101_TRIGGER_OWN_THREAD=y
+# CONFIG_GPIO=y
 
-# CONFIG_MAX30101_HEART_RATE_MODE=y
-CONFIG_MAX30101_ADC_RGE=1
-CONFIG_MAX30101_SMP_AVE=2
-CONFIG_MAX30101_SR=3
-# # Set LED pulse amplitudes
-# CONFIG_MAX30101_LED1_PA=63
-CONFIG_MAX30101_LED3_PA=63
-CONFIG_MAX30101_PW=3
+# Set the thread priority (lower number = higher priority)
+# CONFIG_MAX30101_THREAD_PRIORITY=10
+
+# # # Configure slots for Multi-LED mode
+# CONFIG_MAX30101_SLOT1=3
+# CONFIG_MAX30101_SLOT2=0
+# CONFIG_MAX30101_SLOT3=0
+# CONFIG_MAX30101_SLOT4=0
+
+# # CONFIG_MAX30101_HEART_RATE_MODE=y
+# CONFIG_MAX30101_ADC_RGE=1
+# CONFIG_MAX30101_SMP_AVE=2
+# CONFIG_MAX30101_SR=3
+# # # Set LED pulse amplitudes
+# # CONFIG_MAX30101_LED1_PA=63
+# CONFIG_MAX30101_LED3_PA=63
+# CONFIG_MAX30101_PW=3
 
 # CONFIG_LOG=y
+CONFIG_SERIAL=n
+CONFIG_UART_CONSOLE=n
+CONFIG_UART_NRFX=n
+
+CONFIG_UART_0_NRF_HW_ASYNC=n
+CONFIG_UART_0_NRF_HW_ASYNC_TIMER=0
+
 CONFIG_PRINTK=y
 
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
-# CONFIG_UART_CONSOLE=n
 
 CONFIG_LOG_BACKEND_RTT=y
-
-# Enable the Shell
-# CONFIG_SHELL=y
-# CONFIG_I2C_SHELL=y
