switch on TPS61023 only when BLE connected

--- a/prj.conf
+++ b/prj.conf
@@ -9,6 +9,11 @@ CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
+CONFIG_BT_GATT_CLIENT=y
+
+CONFIG_BT_BUF_ACL_RX_SIZE=267
+CONFIG_BT_BUF_ACL_TX_SIZE=267
+CONFIG_BT_L2CAP_TX_MTU=263
 
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
@@ -16,52 +21,20 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=n
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_500PPM=y
 CONFIG_BT_CTLR_SDC_MAX_CONN_EVENT_LEN_DEFAULT=0
 
-
 CONFIG_GPIO=y
-
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_I2C=y
 CONFIG_SENSOR=y
-# CONFIG_SENSOR_LOG_LEVEL_DBG=y
-
-# # Enable Multi-LED mode
-# CONFIG_MAX30101_MULTI_LED_MODE=y
 
 # This enables the compilation of max30101_trigger.c
 CONFIG_MAX30101=y
 CONFIG_MAX30101_TRIGGER_GLOBAL_THREAD=y
-# CONFIG_MAX30101_TRIGGER_OWN_THREAD=y
-# CONFIG_GPIO=y
 
-# Set the thread priority (lower number = higher priority)
-# CONFIG_MAX30101_THREAD_PRIORITY=10
-
-# # # Configure slots for Multi-LED mode
-# CONFIG_MAX30101_SLOT1=3
-# CONFIG_MAX30101_SLOT2=0
-# CONFIG_MAX30101_SLOT3=0
-# CONFIG_MAX30101_SLOT4=0
-
-# # CONFIG_MAX30101_HEART_RATE_MODE=y
-# CONFIG_MAX30101_ADC_RGE=1
-# CONFIG_MAX30101_SMP_AVE=2
-# CONFIG_MAX30101_SR=3
-# # # Set LED pulse amplitudes
-# # CONFIG_MAX30101_LED1_PA=63
-# CONFIG_MAX30101_LED3_PA=63
-# CONFIG_MAX30101_PW=3
-
-# CONFIG_LOG=y
 CONFIG_SERIAL=n
 CONFIG_UART_CONSOLE=n
 CONFIG_UART_NRFX=n
 
-CONFIG_UART_0_NRF_HW_ASYNC=n
-CONFIG_UART_0_NRF_HW_ASYNC_TIMER=0
-
 CONFIG_PRINTK=y
-
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
-
 CONFIG_LOG_BACKEND_RTT=y
