switch off MAX30101 and TPS61023

--- a/prj.conf
+++ b/prj.conf
@@ -26,6 +26,9 @@ CONFIG_STDOUT_CONSOLE=y
 CONFIG_I2C=y
 CONFIG_SENSOR=y
 
+CONFIG_PM=y
+CONFIG_PM_DEVICE=y
+
 # This enables the compilation of max30101_trigger.c
 CONFIG_MAX30101=y
 CONFIG_MAX30101_TRIGGER_GLOBAL_THREAD=y
