--- a/prj.conf
+++ b/prj.conf
@@ -1,8 +1,6 @@
 CONFIG_NCS_SAMPLES_DEFAULTS=y
 
 CONFIG_ADC=y
-CONFIG_ADC_ASYNC=y
-CONFIG_ADC_NRFX_SAADC=y
 
 CONFIG_BT_DEVICE_NAME="ADS1292"
 CONFIG_BT=y
@@ -37,7 +35,7 @@ CONFIG_SERIAL=n
 CONFIG_UART_CONSOLE=n
 CONFIG_UART_NRFX=n
 
-CONFIG_PRINTK=n
-CONFIG_USE_SEGGER_RTT=n
-CONFIG_RTT_CONSOLE=n
-CONFIG_LOG_BACKEND_RTT=n
+CONFIG_PRINTK=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_LOG_BACKEND_RTT=y
