add ble streaming

--- a/prj.conf
+++ b/prj.conf
@@ -35,7 +35,7 @@ CONFIG_SERIAL=n
 CONFIG_UART_CONSOLE=n
 CONFIG_UART_NRFX=n
 
-CONFIG_PRINTK=y
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_LOG_BACKEND_RTT=y
+CONFIG_PRINTK=n
+CONFIG_USE_SEGGER_RTT=n
+CONFIG_RTT_CONSOLE=n
+CONFIG_LOG_BACKEND_RTT=n
